--- a/sass+bootstrap/5.1/_setup.scss
+++ b/sass+bootstrap/5.1/_setup.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Island+Moments&display=swap');
 $base_Font: georgia;
 $base_Font_Size: 1.2rem;
 $base_Text_Color: teal;
