--- a/Mardi Gras End Project/css/home.css
+++ b/Mardi Gras End Project/css/home.css
@@ -3,13 +3,35 @@
 }
 
 @media (max-width: 560px) {
+
   .phone_Image {
     display: block;
   }
 
-  .carousel {
+  .carousel,
+  #demo {
     display: none;
   }
+}
+
+.crousel_timer {
+  position: relative;
+}
+
+#demo {
+  font-family: 'Pattaya',
+    sans-serif;
+  width: fit-content;
+  background-image: linear-gradient(to bottom right, #9453A6, #8cBF3F, #f2cc0f, #f2f2f2, #9453A6);
+  color: #000;
+  position: absolute;
+  top: 1.5em;
+  right: 1.5em;
+  font-size: 1.3em;
+  font-weight: 500;
+  border: 3px solid #000;
+  z-index: 1;
+  text-align: center;
 }
 
 .row .col {
@@ -19,10 +41,11 @@
 
 .card {
   margin-bottom: 1em;
+  background-color: #92718A;
 }
 
 .container1 {
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, .5) !important;
   position: fixed;
   top: 0;
   left: 0;
