--- a/Mardi Gras End Project/css/home.css
+++ b/Mardi Gras End Project/css/home.css
@@ -12,6 +12,26 @@
   #demo {
     display: none;
   }
+
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .box {
+    width: 70%;
+  }
+
+  .popup {
+    width: 70%;
+  }
+
+  iframe {
+    width: 100%;
+    height: 400px;
+  }
 }
 
 .crousel_timer {
@@ -34,6 +54,11 @@
   text-align: center;
 }
 
+.card-img-top {
+  width: 100%;
+  height: 100%;
+}
+
 .row .col {
   display: flex;
   justify-content: center;
@@ -44,44 +69,75 @@
   background-color: #92718A;
 }
 
-.container1 {
-  background-color: rgba(0, 0, 0, .5) !important;
+.overlay {
   position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: none;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 1;
 }
 
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
 
-.pop_Up1 {
-  text-align: center;
-  font-family: Georgia, serif;
-  width: 100%;
-  max-width: 300px;
-  margin: 15% auto;
+.popup {
+  margin: 70px auto;
   padding: 20px;
-  background-color: #fff;
+  background: #fff;
+  border-radius: 5px;
+  width: fit-content;
   position: relative;
-  border-radius: 5px;
+  transition: all 5s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.pop_Up1 a {
-  background-color: crimson;
-  color: #fff;
-  text-decoration: none;
-  padding: 6px 10px;
+.popup h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
 }
 
-.close {
+.popup .close {
   position: absolute;
-  top: 3px;
-  right: 3px;
-  background-color: crimson;
-  color: #fff;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
   text-decoration: none;
-  padding: 6px 10px;
-  cursor: pointer;
+  color: #333;
+  background-color: crimson;
+}
+
+.popup .close:hover {
+  color: #06D85F;
+}
+
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+}
+
+.content a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5em;
+  text-decoration: none;
+  margin: 0 auto;
+  padding: 0.2em;
+  background-color: #0D6EFD;
+  color: #fff;
   border-radius: 5px;
+
 }
