--- a/Mardi Gras End Project/css/home.css
+++ b/Mardi Gras End Project/css/home.css
@@ -17,6 +17,10 @@
     width: 100%;
     height: 100%;
   }
+
+  .popup h2 {
+    font-size: 1.2em;
+  }
 }
 
 @media screen and (max-width: 700px) {
@@ -104,7 +108,15 @@
 .popup h2 {
   margin-top: 0;
   color: #333;
-  font-family: Tahoma, Arial, sans-serif;
+  font-family: 'Pattaya',
+    sans-serif;
+
+}
+
+.popup p {
+  font-family: 'Roboto',
+    sans-serif;
+  text-align: center;
 }
 
 .popup .close {
@@ -117,10 +129,6 @@
   text-decoration: none;
   color: #333;
   background-color: crimson;
-}
-
-.popup .close:hover {
-  color: #06D85F;
 }
 
 .popup .content {
