--- a/Mardi Gras End Project/css/main.css
+++ b/Mardi Gras End Project/css/main.css
@@ -1,7 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Pattaya&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Comforter+Brush&family=M+PLUS+1+Code&family=Montserrat:wght@300&family=Oswald&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Comforter+Brush&family=M+PLUS+1+Code&family=Montserrat:wght@300&family=Oswald&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Henny+Penny&family=Pattaya&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
   font-family: 'Pattaya';
@@ -9,7 +6,6 @@ body {
   font-family: 'Roboto', sans-serif;
   background-image: linear-gradient(to bottom right, #9453A6, #8cBF3F, #f2cc0f, #f2f2f2, #9453A6);
 }
-
 
 h1 {
   font-family: 'Pattaya',
@@ -38,6 +34,16 @@ p,
 a {
   font-family: 'Roboto',
     sans-serif;
+}
+
+.logo_And_Things {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logo_And_Things img {
+  width: 100px;
+  height: 100px;
 }
 
 .navbar a {
