--- a/Mardi Gras End Project/css/main.css
+++ b/Mardi Gras End Project/css/main.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Henny+Penny&family=Pattaya&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+@media (max-width: 575px) {
+
+  .weather,
+  .logo_And_Things :nth-child(3) {
+    display: none;
+  }
+}
+
 body {
   font-family: 'Pattaya';
   font-family: 'Henny Penny';
