--- a/Mardi Gras End Project/css/about.css
+++ b/Mardi Gras End Project/css/about.css
@@ -1,3 +1,12 @@
+@media (max-width: 575px) {
+  #main_Grid hr {
+    margin: 1em 0;
+    height: 2px;
+    color: rgb(0, 0, 0);
+    display: block;
+  }
+}
+
 @media (min-width: 575px) {
   #main_Grid {
     display: grid;
@@ -32,6 +41,10 @@
   #mayor {
     grid-area: mayor;
     margin-bottom: 1em;
+  }
+
+  #main_Grid hr {
+    display: none;
   }
 }
 
