--- a/Mardi Gras End Project/css/main.css
+++ b/Mardi Gras End Project/css/main.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'Oswald',
+  font-family: 'Henny Penny',
     sans-serif;
   display: flex;
   justify-content: center;
@@ -29,7 +29,12 @@ h2 {
 }
 
 h3 {
-  font-family: 'oswald',
+  font-family: 'Henny Penny',
+    sans-serif;
+}
+
+h4 {
+  font-family: 'Henny Penny',
     sans-serif;
 }
 
@@ -56,6 +61,7 @@ a {
 
 .navbar a {
   font-weight: bold;
+  font-family: 'Henny Penny';
 }
 
 .main_Logo {
@@ -82,6 +88,7 @@ a {
 }
 
 .footer_Break {
+  margin-top: 1em;
   background-color: rgb(0, 0, 0);
   width: 100%;
   height: 2px;
