--- a/Mardi Gras End Project/css/faq.css
+++ b/Mardi Gras End Project/css/faq.css
@@ -1,24 +1,3 @@
-/* .accordion {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
-
-.panel {
-  padding: 0 18px;
-  display: none;
-  /* background-color: white; */
-/* overflow: hidden; */
-/* } */
-@import url("https://fonts.googleapis.com/css?family=Hind:300,400&display=swap");
-
 :root {
   --color-text: hsl(248, 10%, 40%);
   --color-text-muted: hsl(248, 10%, 40%);
@@ -115,4 +94,10 @@ main>h2 {
 
 .accordion {
   margin-bottom: 1rem;
+}
+
+@media (max-width: 565px) {
+  main .row {
+    flex-direction: column;
+  }
 }
