--- a/Mardi Gras End Project/css/media.css
+++ b/Mardi Gras End Project/css/media.css
@@ -150,7 +150,7 @@ h2 {
 
 
 
-main img {
+#images img {
   border: 4px dashed purple;
 }
 
@@ -174,6 +174,7 @@ main img {
 
   main #images img:hover {
     transform: scale(2);
+    transition: 500ms;
   }
 
   main .row:nth-child(3) img {
